2009-06-13  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_memfile.d (loadmem_from_handle): update only the objects loaded
	from the image. fixes gcsafety build (and some undefined behavior in
	others)

2009-06-12  Sam Steingold  <sds@gnu.org>

	* floatprint.lisp (decode-float-decimal): only widen [a1;a2] when
	binmant is even - because of normal IEEE rounding mode when even
	numbers represent the inclusive intervals

2009-06-11  Sam Steingold  <sds@gnu.org>

	* clisp-link.in (add-module-set): remove command
	(add-module-sets): rename to add
	(create-module-set): rename to create
	* makemake.in (base, full): use add instead of add-module-sets

2009-06-09  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: add WITH-DEFERRED-INTERRUPTS (i.e. WITHOUT-INTERRUPTS)
	* constsym.d (*DEFER-INTERRUPTS*, *DEFERRED-INTERRUPTS*): declare
	* threads.lisp (*DEFER-INTERRUPTS*, *DEFERRED-INTERRUPTS*): ditto. also
	initialize them with *DEFAULT-SPECIAL-BINDINGS*
	(WITH-DEFERRED-INTERRUPTS): add and export it
	* zthread.d (thread_stub): initialize per thread values of
	*DEFER-INTERRUPTS* and *DEFERRED-INTERRUPTS* in case user use some "bad"
	initial bindings
	(THREAD-INTERRUPT): reorder the arguments on the foreign stack
	* spvw.d (mt_main_actions): initialize per thread values of
	*DEFER-INTERRUPTS* and *DEFERRED-INTERRUPTS*
	(handle_pending_interrupts): in case we should defer interrupt - add it
	*DEFERRED-INTERRUPTS*. handle new stack order
	(signal_handler_thread): reorder the arguments on the foreign stack

2009-06-07  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: add partial support for thread interruption on WIN32
	* lispbibl.d (GC_SAFE_REGION_END_i): handle pending interrupts
	depending on thread's flavour
	(install_async_signal_handlers, thr_signal_handler)
	(SIG_THREAD_INTERRUPT, SIG_TIMEOUT_CALL): make them local in spvw.d
	(signal_timeout_call): function to announce new timeout call. used by
	CALL-WITH-TIMEOUT